--- a/chrome-extension/site_handlers/dom_in_leba.html
+++ b/chrome-extension/site_handlers/dom_in_leba.html
@@ -3,7 +3,7 @@
 <head></head>
 
 <body>
-<iframe src="http://localhost:5000/restaurants/Dominos%20Pizza" width="300px" height="600px">
+<iframe src="http://grapevine.makkarlabs.in/restaurants/Dominos%20Pizza" width="300px" height="600px">
 </iframe>
 </body>
 </html>
