--- a/chrome-extension/site_handlers/mcdonaldsindia_com.html
+++ b/chrome-extension/site_handlers/mcdonaldsindia_com.html
@@ -3,7 +3,7 @@
 <head></head>
 
 <body>
-<iframe src="http://localhost:5000/restaurants/McDonalds" width="300px" height="600px">
+<iframe src="http://grapevine.makkarlabs.in/restaurants/McDonalds" width="300px" height="600px">
 </iframe>
 </body>
 </html>
